feat!: Refactor code and add tests
- Refactor code to improve readability and maintainability.
- Rename some fields in the descriptor structs for clarity.
- Comment out some fields in the MessageFieldDescriptor struct that are not yet implemented.
- Remove the ToSingularLowerCamelCase function from the template functions as it is no longer needed.
- Add new unit tests for the template functions.
- Add new test proto files and templates for testing.
- Update the go.mod and go.sum files to include the new testing library.
- Modify the main function to accept an io.Reader instead of directly using os.Stdin.

--- a/example/dart.template
+++ b/example/dart.template
@@ -2,7 +2,7 @@
 class {{toSingular .MessageName}} with _${{toSingular .MessageName}} {
   const {{toSingular .MessageName}}._();
   const factory {{toSingular .MessageName}}({
-    {{ range .Fields }}{{if .IsRequired}}required {{end}}{{ .DataTypeName }} {{ toLowerCamelCase .Name }},
+    {{ range .Fields }}required {{ .DataTypeName }} {{ toLowerCamelCase .FieldName }},
     {{ end }}
   }) = _{{toSingular .MessageName}};
 
