feat: updated version of protobuf to support optional fields
This change updates the version of protobuf to support optional fields,
optional fields are now supported.
Also, toPlural has been added to the template functions and the tests have been updated.

--- a/test/message.template
+++ b/test/message.template
@@ -4,6 +4,7 @@
 {{ range .Fields }}
     {{if .IsTimestamp}}// timestamp{{end}}
     {{if .IsRepeated}}// repeated{{end}}
+    {{if .IsOptional}}// optional{{end}}
     {{ toLowerCamelCase .FieldName }}: {{ .DataTypeName }},
 {{ end }}
 
